<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileSUSCliente</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tela_chat">TelaChat</string>
    <string name="title_activity_tela_ocorrencia">TelaOcorrencia</string>
    <string name="title_activity_tela_conteudo">TelaConteudo</string>
    <string name="enviar">enviar</string>
    <string name="chat">Chat</string>
    <string name="ocorrencia">Ocorrencia</string>
    <string name="capturar">Capturar imagem</string>
    <string name="descricao">Descrição:</string>
    <string name="localizacao">Localização:</string>
    <string name="situacao">Situação:</string>
    <string name="registrar">Registrar</string>
    <string name="title_activity_tela_maps">TelaMaps</string>
    <string name="title_activity_tela_cam">TelaCam</string>
    <string name="title_activity_tela_config">TelaConfig</string>
    <string name="menu_settings">Settings</string>
    <string name="Mapa">Mapa</string>
    <string name="Finalizar">Finalizar</string>

</resources>